--- a/css/src/language-switcher.css
+++ b/css/src/language-switcher.css
@@ -7,10 +7,6 @@
 .pll-switcher.wp-block-polylang-language-switcher {
 	box-sizing: border-box;
 }
-.pll-layout-dropdown.wp-block-polylang-language-switcher.alignwide,
-.pll-layout-dropdown.wp-block-polylang-language-switcher.alignfull {
-	width: 100%;
-}
 .pll-layout-dropdown.wp-block-polylang-language-switcher ul {
 	background-color: var(--pll-dropdown-background-color, inherit);
 }
@@ -19,7 +15,6 @@
  * Alignment (block).
  * Block wrappers may set inline margin:0, so center/right use width:100% + flex.
  */
-.pll-alignment-center.wp-block-polylang-language-switcher,
-.pll-alignment-right.wp-block-polylang-language-switcher {
+.wp-block-polylang-language-switcher {
 	width: 100%;
 }
